Always show the vertical scrollbar in the content pane to avoid flicker

--- a/web/src/style/app.css
+++ b/web/src/style/app.css
@@ -8,8 +8,8 @@
   margin-right: 16px;
 }
 #content {
-  /* Set backgroud to light gray */
   background-color: rgb(245, 245, 245);
+  overflow-y: scroll;
 }
 .nav-location {
   font-weight: bold;
